[package]
name = "compio-ktls"
version = "0.1.0"
edition = "2024"
description = "Kernel TLS (kTLS) support for Compio"
repository = "https://github.com/fantix/compio-ktls"
license = "Apache-2.0 OR MulanPSL-2.0"
keywords = ["ktls", "tls", "compio", "async", "kernel"]
categories = ["asynchronous", "network-programming", "cryptography"]
readme = "README.md"

[dependencies]
