[package]
name = "compio-ktls"
version = "0.1.0"
edition = "2024"
description = "Kernel TLS (kTLS) support for Compio"
repository = "https://github.com/compio-rs/compio-ktls"
license = "Apache-2.0 OR MulanPSL-2.0"
authors = ["Fantix King <fantix.king@gmail.com>"]
keywords = ["ktls", "tls", "compio", "async", "kernel"]
categories = ["asynchronous", "network-programming", "cryptography"]
readme = "README.md"

[dependencies]
rustls = { version = "0.23", default-features = false, optional = true }
synchrony = { version = "0.1", features = ["bilock"] }
openssl = { version = "0.10", optional = true }

[dependencies.compio-io]
version = "0.9"
default-features = false
features = ["ancillary", "bytemuck"]

[dependencies.compio-buf]
version = "0.8"
default-features = false

[target."cfg(target_os = \"linux\")".dependencies]
libc = "0.2"
ktls-core = "0.0.5"

[features]
default = ["rustls", "detect_key_update_at_build"]
rustls = ["dep:rustls", "ktls-core/shim-rustls"]
ring = ["rustls", "rustls/ring"]
openssl = ["dep:openssl"]
key_update = []
detect_key_update_at_build = []
app-write-with-empty-ancillary = []
sync = []

[dev-dependencies]
compio = { version = "0.18", features = ["net", "rustls", "macros"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2.2"

[patch.crates-io.compio]
git = "https://github.com/compio-rs/compio.git"
rev = "ffb642c7061d2146c719534e8e6ee877ffc25bcf"

[patch.crates-io.compio-io]
git = "https://github.com/compio-rs/compio.git"
rev = "ffb642c7061d2146c719534e8e6ee877ffc25bcf"

[patch.crates-io.compio-buf]
git = "https://github.com/compio-rs/compio.git"
rev = "ffb642c7061d2146c719534e8e6ee877ffc25bcf"
